@@ -8,6 +8,11 @@
     destination="4.0"
     profile="eea.themecentre:default">
 
+    <genericsetup:upgradeStep
+      title="Fix navigation for eea.themecentre by adding the INavigationRoot marker interface"
+      handler="eea.themecentre.upgrades.evolve40.fix_themes_navigation"
+      />
+
     <genericsetup:upgradeDepends
       title="Import all steps from eea.themecentre profile"
       import_profile="eea.themecentre:default"
